--- a/deploy/deploy/deploy.csproj
+++ b/deploy/deploy/deploy.csproj
@@ -98,6 +98,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\deploy2.pubxml" />
     <None Include="Properties\PublishProfiles\deployment.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
