--- a/deploy/deploy/deploy.csproj
+++ b/deploy/deploy/deploy.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Hesapla.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
