--- a/deploy/deployTest/packages.config
+++ b/deploy/deployTest/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net461" developmentDependency="true" />
   <package id="Moq" version="4.10.0" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
